refactor: Add Selsabila Guettaf temam picture to profile page

--- a/selsabila-guettaftemam.html
+++ b/selsabila-guettaftemam.html
@@ -32,8 +32,18 @@
       box-shadow: 0 12px 30px rgba(0, 0, 0, 0.5);
     }
 
+    .profile-pic {
+      width: 130px;
+      height: 130px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #ff80ab;
+      margin-bottom: 20px;
+      box-shadow: 0 0 15px rgba(255, 128, 171, 0.4);
+    }
+
     h1 {
-      color: #ff80ab; /* Pink accent */
+      color: #ff80ab;
       font-size: 2.2em;
       margin-bottom: 10px;
     }
@@ -88,6 +98,9 @@
 </head>
 <body>
   <div class="card">
+    <!-- 🔹 Profile Picture -->
+    <img src="assets/pictures/selsabila.png" alt="Selsabila Guettaf Temam" class="profile-pic" />
+
     <h1>Selsabila Guettaf Temam</h1>
     <p>
       I am a passionate 3rd-year Artificial Intelligence student at ENSIA with a strong foundation 
