--- a/nihad-meriem-miraoui.html
+++ b/nihad-meriem-miraoui.html
@@ -66,7 +66,7 @@
       <div class="brand">
         <div class="logo">NM</div>
         <div>
-          <div style="font-weight:800">Nihad Miraoui</div>
+          <div style="font-weight:800">Nihad Meriem Miraoui</div>
           <div style="font-size:12px;color:var(--muted)">Web Developer • AI Student</div>
         </div>
       </div>
@@ -85,18 +85,13 @@
           <a class="btn" href="#projects">See my work</a>
         </div>
 
-        <div class="skills" style="margin-top:18px">
-          <div class="skill">React</div>
-          <div class="skill">Python</div>
-          <div class="skill">Flask</div>
-          <div class="skill">Git</div>
-        </div>
+        
       </div>
 
       <aside class="card profile-card">
         <div class="avatar">N</div>
-        <div style="font-weight:800;margin-top:8px">Nihad Miraoui</div>
-        <div class="meta">Algeria • nihad@example.com</div>
+        <div style="font-weight:800;margin-top:8px">Nihad Meriem Miraoui</div>
+        <div class="meta">Algeria • nihad.meriem.miraoui@ensia.edu.dz</div>
         <div style="margin-top:12px">
         </div>
       </aside>
