refactor : add biography  in the profile page

--- a/chouimet-noussayba.html
+++ b/chouimet-noussayba.html
@@ -19,11 +19,19 @@
 
     <section class="about">
       <h2>About Me</h2>
-      <p>
-        Passionate web developer with a strong focus on crafting clean, responsive, and modern websites. 
-        I enjoy blending design and code to build delightful user experiences.
-      </p>
-    </section>
+  <p>
+    I’m a third-year student at the <strong>École Supérieure d’Intelligence Artificielle (ENSIA)</strong>, where I’m developing my skills and curiosity in the ever-evolving world of technology. 
+    My main interests lie in <strong>electronics</strong>, <strong>artificial intelligence</strong>, and the ways innovation can shape the future.
+  </p>
+  <p>
+    Although I’m not yet a professional web developer, I’ve enjoyed creating and experimenting with websites as a way to blend design and functionality. 
+    I love learning how digital systems work — from the underlying logic to the user experience — and I’m always eager to explore new tools and frameworks that expand my understanding of tech.
+  </p>
+  <p>
+    My long-term goal is to contribute to cutting-edge projects that connect <strong>AI, smart technologies, and human creativity</strong> — helping build a smarter and more connected world.
+  </p>
+</section>
+
 
     <section class="skills">
       <h2>Technical Skills</h2>
