--- a/chouimet-noussayba.html
+++ b/chouimet-noussayba.html
@@ -13,7 +13,7 @@
     <div class="profile-header">
       <img src="assets/pictures/profile.jpg" alt="Noussayba Chouimet" class="profile-avatar">
       <h1>Noussayba Chouimet</h1>
-      <p class="tagline">Creative Web Developer & Designer</p>
+      <p class="tagline">Hi iam noussayba a creative web and app developer!</p>
     </div>
 
     <!-- About Section -->
