--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="member-card">
       <h2>Ala Bensabra</h2>
       <div class="role">Team Member</div>
-      <a href="" target="_blank">View Profile</a>
+      <a href="ala-bensabra.html" target="_blank">View Profile</a>
     </div>
   </section>
 
