refactor: adding noussayba chouimet profile link to index

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="member-card">
       <h2>Noussayba Om Salama Chouimet</h2>
       <div class="role">Team Member</div>
-      <a href="" target="_blank">View Profile</a>
+      <a href="chouimet-noussayba.html" target="_blank">View Profile</a>
     </div>
 
     <div class="member-card">
