--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="member-card">
       <h2>Nihad Meriem Miraoui</h2>
       <div class="role">Team Member</div>
-      <a href="" target="_blank">View Profile</a>
+      <a href="nihad-meriem-miraoui.html" target="_blank">View Profile</a>
     </div>
 
     <div class="member-card">
