refactor adding lina sekfali's profile page link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="member-card">
       <h2>Lina Sekfali</h2>
       <div class="role">Team Member</div>
-      <a href="" target="_blank">View Profile</a>
+      <a href="lina-sekfali.html" target="_blank">View Profile</a>
     </div>
 
     <div class="member-card">
