Fix : correct the picutre link

--- a/chouimet-noussayba.html
+++ b/chouimet-noussayba.html
@@ -11,7 +11,7 @@
 
   <div class="profile-container">
     <div class="profile-header">
-      <img src="assets/pictures/profile.jpg" alt="Noussayba Chouimet" class="profile-avatar">
+      <img src="assets/pictures/noussayba_chouimet.jpg" alt="Noussayba Chouimet" class="profile-avatar">
       <h1>Noussayba Chouimet</h1>
       <p class="tagline">Hi iam noussayba a creative web and app developer!</p>
     </div>
