fix : Update avatar image source in ala-bensabra.html

--- a/ala-bensabra.html
+++ b/ala-bensabra.html
@@ -70,7 +70,7 @@
   <div class="wrap">
     <header>
       <div class="id-block">
-        <img class="avatar" src="assets\me.jpg" alt="Ala Bensabra avatar" />
+        <img class="avatar" src="assets\ala.jpg" alt="Ala Bensabra avatar" />
         <div class="title">
           <h1>Ala Bensabra</h1>
           <p>I’m a 3rd‑year student at ENSIA. I studied at Nasri Ramdane high school, where I earned my Baccalauréat in 2023 before joining ENSIA. I enjoy designing clean, friendly interfaces and turning them into accessible, responsive pages.</p>
